# Minerva

./: .bandit  .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  DownloadStrapper.py  Exp1.py  LICENSE.txt  Landcovernet_Download_API.py  MANIFEST.in  MinervaPercep.py  Pipfile  README.md  Radiant_MLHub_DataVis.py  S2.yml  Tiff_Read.py  banner.txt  conf.py  config.yml  docs_readme.html  genindex.html  index.html  index.rst  loaders.py  models.py  objects.inv  py-modindex.html  pyproject.toml  qodana.sarif.json  qodana.yaml  readme_link.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  trainer.py  (+1 more)
.circleci/: config.yml
.doctrees/: docs_readme.doctree
.doctrees/source/: glossary.doctree
.doctrees/source/guides/: exp_config.doctree  index.doctree
.doctrees/source/minerva/: modelio.doctree  optimisers.doctree  pytorchtools.doctree  samplers.doctree  scheduler.doctree  trainer.doctree  transforms.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code_quality.yml  coveralls.yml  documentation.yaml  draft-pdf.yml  publish.yml  tests.yml  ubuntu_tests.yml  ubuntu_tests_310.yml  ubuntu_tests_36.yml  ubuntu_tests_37.yml  ubuntu_tests_38.yml  ubuntu_tests_39.yml  windows_tests.yml  windows_tests_36.yml  windows_tests_37.yml  windows_tests_38.yml  windows_tests_39.yml
Minerva/: MinervaPercep.py  loaders.py  logger.py  metrics.py  model_io.py  modelio.py  models.py  pytorchtools.py  trainer.py  transforms.py
Minerva/utils/: DataVis.py  Landcovernet_Download_API.py  __init__.py  utils.py  visutils.py
_sources/: index.rst.txt  readme_link.rst.txt
_sources/source/guides/: exp_config.rst.txt  index.rst.txt
_sources/source/minerva/: modelio.rst.txt  optimisers.rst.txt  samplers.rst.txt  transforms.rst.txt
config/: CNN_config.yml  Chesapeake13.yml  ChesapeakeCVPR.yml  ESRI.yml  FCNResNet_config.yml  MLP_config.yml  NAIP.yml  RE.yml  ResNet_config.yml  S2.yml  config.yml  example_config.yml  exp_mf_config.yml  landcovernet.yml
docs/: Makefile  conf.py  docs_readme.md  index.rst
docs/source/: conf.py  glossary.rst  index.rst
docs/source/guides/: exp_config.rst  index.rst
docs/source/minerva/: datasets.rst  index.rst  logger.rst  metrics.rst  models.rst  pytorchtools.rst  scheduler.rst  trainer.rst
docs/source/usage/: datasets.rst  logger.rst  metrics.rst  modelio.rst  models.rst  optimisers.rst  pytorchtools.rst  samplers.rst  utils.rst  (+4 more)
inbuilt_cfgs/: CNN_config.yml  Chesapeake13.yml  Chesapeake7.yml  ChesapeakeCVPR.yml  ESRI.yml  FCNResNet_config.yml  MLP_config.yml  NAIP.yml  RE.yml  ResNet_config.yml  S2.yml  config.yml  example_CNN_config.yml  example_GeoCLR_config.yml  example_UNetR_config.yml  example_autoencoder_config.yml  example_config.yml  exp_mf_config.yml  landcovernet.yml  mf_config.yml  new_config.yml
joss_paper/: paper.bib  paper.md
minerva/: __init__.py  conversion.py  datasets.py  logger.py  loss.py  metrics.py  modelio.py  models.py  optimisers.py  pytorchtools.py  samplers.py  scheduler.py  trainer.py  transforms.py
minerva/datasets/: __init__.py  __testing.py  collators.py  dfc.py  factory.py  multispectral.py  naip.py  paired.py  ssl4eos12.py  utils.py
minerva/inbuilt_cfgs/: Chesapeake7.yml  ChesapeakeCVPR.yml  ESRI.yml  Sentinel2.yml  example_3rd_party.yaml  example_3rd_party.yml  example_CNN_config.yaml  example_CNN_config.yml  example_ChangeDetector.yaml  example_FlexiSceneClassifier.yaml  example_GSConvNet-II.yaml  example_GSConvNet-II.yml  example_GeoCLR_config.yaml  example_GeoCLR_config.yml  example_GeoSimConvNet.yaml  example_GeoSimConvNet.yml  example_MultiLabel.yaml  example_PSP.yaml  example_SceneClassifier.yaml  example_UNetR_config.yaml  example_UNetR_config.yml  example_autoencoder_config.yaml  example_autoencoder_config.yml  example_config.yaml  example_config.yml  exp_mf_config.yaml  exp_mf_config.yml
minerva/logger/: __init__.py  steplog.py  tasklog.py
minerva/logging/: __init__.py  steplog.py  tasklog.py
minerva/models/: __depreciated.py  __init__.py  change_detector.py  classifiers.py  core.py  deeplabv3.py  fcn.py  psp.py  resnet.py  siamese.py  unet.py  utils.py
minerva/tasks/: __init__.py  core.py  custom.py  downstream.py  downstream_validation.py  epoch.py  knn.py  tsne.py
minerva/utils/: __init__.py  config_load.py  runner.py  utils.py  visutils.py
notebooks/: Downstream_Demo.ipynb  Downstream_PSP_Demo.ipynb  Downstream_Scene_Demo.ipynb  SSL4EO-S12_Demo.ipynb  Torchgeo_FCN_Demo.ipynb  Torchgeo_FCN_Full.ipynb  Torchgeo_FCN_Small.ipynb  Visualise_Siamese_Pair.ipynb
requirements/: requirements.txt  requirements_dev.txt
scripts/: DatasetVis.py  Make_SSL4EO_LMDB.py  ManifestMake.py  MinervaClusterVis.py  MinervaExp.py  MinervaPipe.py  RunTensorBoard.py  TorchWeightDownloader.py  Torch_to_ONNX.py
source/: glossary.html
source/guides/: exp_config.html  index.html
source/minerva/: modelio.html  optimisers.html  pytorchtools.html  samplers.html  scheduler.html  trainer.html  transforms.html
tests/: __init__.py  conftest.py  test_config.py  test_datasets.py  test_fcn.py  test_logger.py  test_logging.py  test_metrics.py  test_modelio.py  test_models.py  test_models_core.py  test_models_depreciated.py  test_optimisers.py  test_pytorchtools.py  test_resnets.py  test_runner.py  test_samplers.py  test_siamese.py  test_trainer.py  test_transforms.py  test_unet.py  test_utils.py  test_visutils.py  tests.py
tests/test_datasets/: test_collators.py  test_dataset_utils.py  test_datasets.py  test_dfc.py  test_factory.py  test_multispectral.py  test_paired.py  test_ssl4eo_s12.py  test_testing.py
tests/test_logging/: test_steplog.py
tests/test_models/: test_core.py  test_depreciated.py  test_fcn.py  test_models_core.py  test_resnets.py  test_siamese.py  test_unet.py
tests/test_tasks/: test_epoch.py  test_tasks_core.py
tests/test_utils/: test_config.py  test_runner.py  test_utils.py  test_visutils.py
utils/: DataVis.py  Landcovernet_Download_API.py  Radiant_MLHub_DataVis.py  utils.py
(+358 files in other folders)
