[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=minerva"
testpaths = ["tests",]
filterwarnings = "ignore::DeprecationWarning"

[tool.mypy]
mypy_path = "minerva"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
plugins = "numpy.typing.mypy_plugin"

[tool.isort]
profile = "black"

[tool.bandit]
skips = ["B101", "B311", "B404", "B603"]
