[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minerva"
version = "0.23.0"
description = "Package to build, train and test neural network models on geospatial data"
readme = "README.md"
authors = [
    { name="Harry Baker", email="hjb1d20@soton.ac.uk" },
]
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "License :: OSI Approved :: GNU Lesser General Public License v3 (GPLv3)",
        "Development Status :: 4 - Beta",
        "Operating System :: POSIX :: Linux",
        "Natural Language :: English",
]

[project.urls]
"Homepage" = "https://github.com/Pale-Blue-Dot-97/Minerva"
"Bug Tracker" = "https://github.com/Pale-Blue-Dot-97/Minerva/issues"

[tool.pytest.ini_options]
addopts = "--cov=minerva"
testpaths = ["tests",]
filterwarnings = "ignore::DeprecationWarning"

[tool.mypy]
mypy_path = "minerva"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
plugins = "numpy.typing.mypy_plugin"

[tool.isort]
profile = "black"

[tool.bandit]
skips = ["B101", "B311", "B404", "B603"]
