[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minerva"
description = "Package to build, train and test neural network models on geospatial data"
readme = "README.md"
authors = [
    { name="Harry Baker", email="hjb1d20@soton.ac.uk" },
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "License :: OSI Approved :: MIT License",
        "Development Status :: 4 - Beta",
        "Operating System :: OS Independent",
        "Natural Language :: English",
]

dependencies = [
    "alive_progress",
    "argcomplete",
    "catalyst",
    "geopy",
    "imageio",
    "inputimeout",
    "lightly",
    "matplotlib",
    "mlflow",
    "nptyping",
    "numba>=0.57.0; python_version>='3.11'",
    "numpy",
    "overload",
    "pandas",
    "psutil",
    "pyyaml",
    "requests",
    "scikit-learn",
    "tabulate",
    "torchgeo>=0.4.0",
    "torchinfo",
    "tqdm",
    "types-PyYAML",
    "types-requests",
    "types-tabulate",
    "wandb",
]

[project.optional-dependencies]
test = [
    "internet-sabotage3",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "tox",
]

docs = [
    "myst_parser",
    "sphinx",
    "sphinx-rtd-theme",
]

dev = [
    "pre-commit",
    "build",
    "pipenv",
]

onnx = [
    "onnx2torch",
]

tensorflow = [
    "tensorflow",
]

[project.urls]
"Homepage" = "https://github.com/Pale-Blue-Dot-97/Minerva"
"Bug Tracker" = "https://github.com/Pale-Blue-Dot-97/Minerva/issues"

[tool.pytest.ini_options]
addopts = "--cov=minerva"
testpaths = ["tests",]
filterwarnings = "ignore::DeprecationWarning"

[tool.mypy]
mypy_path = "minerva"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
plugins = "numpy.typing.mypy_plugin"

[tool.isort]
profile = "black"

[tool.bandit]
skips = ["B101", "B311", "B404", "B603"]

[tool.setuptools_scm]
