[metadata]
name = minerva
version = attr: minerva.__version__
description = Package to build, train and test neural network models on geospatial data
long_description = README.md
long_description_content_type = text/markdown
author = attr: minerva.__author__
author_email = attr: minerva.__contact__
url = https://github.com/Pale-Blue-Dot-97/Minerva
license = attr: minerva.__license__
license_files = LICENCE
classifiers =
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.8
        License :: OSI Approved :: GNU Lesser General Public License v3 (GPLv3)
        Development Status :: 4 - Beta
        Operating System :: POSIX :: Linux
        Natural Language :: English

[options]
packages = minerva, minerva.utils, minerva.models
install_requires =
        torchgeo>=0.4.0
        numba>=0.57.0rc1;python_version>='3.11'
        pandas
        tensorflow
        imageio
        torchinfo
        tabulate
        inputimeout
        ipykernel
        psutil
        alive_progress
        geopy
        catalyst
        overload
        nptyping
        lightly
        argcomplete
        mlflow
        onnx2torch
        wandb
python_requires = >=3.8
package_dir =
scripts = scripts/MinervaExp.py
        scripts/ManifestMake.py
        scripts/MinervaClusterVis.py
        scripts/MinervaPipe.py
        scripts/RunTensorBoard.py
        scripts/Torch_to_ONNX.py
        scripts/TorchWeightDownloader.py
        notebooks/Visualise_Siamese_Pair.ipynb
zip_safe = no

[options.extras_require]
test =
    internet-sabotage3
    flake8
    mypy
    pytest
    pytest-cov
    tox


docs =
    myst_parser
    sphinx
    sphinx-rtd-theme


dev =
    pre-commit
    build
    pipenv

onnx =
    onnx2torch

[options.package_data]
minerva = py.typed
minerva.utils = py.typed
minerva.models = py.typed
minerva.bin = py.typed

[flake8]
max-line-length = 120
