[metadata]
name = minerva
description = Package to build, train and test neural network models on geospatial data
long_description = README.md
long_description_content_type = text/markdown
author = attr: minerva.__author__
author_email = attr: minerva.__contact__
url = https://github.com/Pale-Blue-Dot-97/Minerva
download_url = https://github.com/Pale-Blue-Dot-97/Minerva/releases/download/v0.24.0/minerva-0.24.0-py3-none-any.whl
license = attr: minerva.__license__
license_files = LICENCE
classifiers =
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3 :: Only
        License :: OSI Approved :: MIT License
        Development Status :: 4 - Beta
        Operating System :: OS Independent
        Natural Language :: English

[options]
packages = minerva, minerva.utils, minerva.models
install_requires =
        torchgeo>=0.4.0
        numba>=0.57.0;python_version>='3.11'
        pandas
        imageio
        torchinfo
        tabulate
        inputimeout
        ipykernel
        psutil
        alive_progress
        geopy
        catalyst
        overload
        nptyping
        lightly
        argcomplete
        mlflow
        wandb
        segmentation-models-pytorch
python_requires = >=3.9
package_dir =
scripts = scripts/MinervaExp.py
        scripts/ManifestMake.py
        scripts/MinervaClusterVis.py
        scripts/MinervaPipe.py
        scripts/RunTensorBoard.py
        scripts/Torch_to_ONNX.py
        scripts/TorchWeightDownloader.py
        notebooks/Visualise_Siamese_Pair.ipynb
        notebooks/SSL4EO-S12_Demo.ipynb
        notebooks/Torchgeo_FCN_Demo.ipynb
        notebooks/Torchgeo_FCN_Full.ipynb
        notebooks/Torchgeo_FCN_Small.ipynb
zip_safe = no

[options.extras_require]
test =
    internet-sabotage3
    flake8
    mypy
    pytest
    pytest-cov
    pytest-lazy-fixture
    tox


docs =
    myst_parser
    sphinx
    sphinx-rtd-theme


dev =
    pre-commit
    build
    pipenv

onnx =
    onnx2torch

tensorflow =
    tensorflow

[options.package_data]
minerva = py.typed
minerva.utils = py.typed
minerva.models = py.typed
minerva.bin = py.typed

[flake8]
max-line-length = 120
